# mpris-skip

./: README.md  pyproject.toml
src/mpris_skip/: __init__.py  __main__.py
