[project]
name = "mpris-skip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martin Ueding", email = "mu@martin-ueding.de" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
mpris-skip = "mpris_skip:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
